--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -578,7 +578,7 @@ cite {
 
 .page-header {
   padding-bottom: 9px;
-  margin: 40px 0 20px;
+  margin: 4.0% 0 2.0%;
   border-bottom: 1px solid #eeeeee;
 }
 
@@ -607,8 +607,8 @@ ol ol {
 
 .list-inline > li {
   display: inline-block;
-  padding-right: 5px;
-  padding-left: 5px;
+  padding-right: 0.5%;
+  padding-left: 0.5%;
 }
 
 .list-inline > li:first-child {
@@ -782,8 +782,8 @@ pre code {
 }
 
 .container {
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 6%;
+  padding-left: 6%;
   margin-right: auto;
   margin-left: auto;
 }
@@ -808,27 +808,27 @@ pre code {
   clear: both;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 76.8%) {
   .container {
-    width: 750px;
+    width: 75.0%;
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 99.2%) {
   .container {
-    width: 970px;
+    width: 97.0%;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 120%) {
   .container {
-    width: 1170px;
+    width: 100%;
   }
 }
 
 .row {
-  margin-right: -15px;
-  margin-left: -15px;
+  margin-right: -1.5%;
+  margin-left: -1.5%;
 }
 
 .row:before,
@@ -901,8 +901,8 @@ pre code {
 .col-lg-12 {
   position: relative;
   min-height: 1px;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 1%;
+  padding-left: 1%;
 }
 
 .col-xs-1,
@@ -1294,7 +1294,7 @@ pre code {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 100px) {
   .col-md-1,
   .col-md-2,
   .col-md-3,
