--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -578,7 +578,7 @@ cite {
 
 .page-header {
   padding-bottom: 9px;
-  margin: 4.0% 0 2.0%;
+  margin: 40px 0 20px;
   border-bottom: 1px solid #eeeeee;
 }
 
@@ -607,8 +607,8 @@ ol ol {
 
 .list-inline > li {
   display: inline-block;
-  padding-right: 0.5%;
-  padding-left: 0.5%;
+  padding-right: 5px;
+  padding-left: 5px;
 }
 
 .list-inline > li:first-child {
@@ -782,8 +782,8 @@ pre code {
 }
 
 .container {
-  padding-right: 6%;
-  padding-left: 6%;
+  padding-right: 15px;
+  padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -808,27 +808,27 @@ pre code {
   clear: both;
 }
 
-@media (min-width: 76.8%) {
+@media (min-width: 768px) {
   .container {
-    width: 75.0%;
+    width: 750px;
   }
 }
 
-@media (min-width: 99.2%) {
+@media (min-width: 992px) {
   .container {
-    width: 97.0%;
+    width: 970px;
   }
 }
 
-@media (min-width: 120%) {
+@media (min-width: 1200px) {
   .container {
-    width: 100%;
+    width: 1170px;
   }
 }
 
 .row {
-  margin-right: -1.5%;
-  margin-left: -1.5%;
+  margin-right: -15px;
+  margin-left: -15px;
 }
 
 .row:before,
@@ -901,8 +901,8 @@ pre code {
 .col-lg-12 {
   position: relative;
   min-height: 1px;
-  padding-right: 1%;
-  padding-left: 1%;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 .col-xs-1,
@@ -1070,6 +1070,10 @@ pre code {
 
 .col-xs-push-0 {
   left: 0;
+}
+
+.col-xs-YUoffset {
+  margin-right: 25%;
 }
 
 .col-xs-offset-12 {
@@ -1253,6 +1257,10 @@ pre code {
   .col-sm-push-0 {
     left: 0;
   }
+  .col-sm-YUoffset {
+  margin-right: 25%;
+}
+
   .col-sm-offset-12 {
     margin-left: 100%;
   }
@@ -1294,7 +1302,7 @@ pre code {
   }
 }
 
-@media (min-width: 100px) {
+@media (min-width: 992px) {
   .col-md-1,
   .col-md-2,
   .col-md-3,
@@ -1423,6 +1431,10 @@ pre code {
   .col-md-push-0 {
     left: 0;
   }
+  .col-md-YUoffset {
+  margin-right: 25%;
+}
+
   .col-md-offset-12 {
     margin-left: 100%;
   }
@@ -1593,6 +1605,10 @@ pre code {
   .col-lg-push-0 {
     left: 0;
   }
+  .col-lg-YUoffset {
+  margin-right: 25%;
+}
+
   .col-lg-offset-12 {
     margin-left: 100%;
   }
