--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1634,7 +1634,7 @@ pre code {
     margin-left: 41.66666666666667%;
   }
   .col-lg-offset-4 {
-    margin-left: 33.33333333333333%;
+    margin-left: 36.3%;
   }
   .col-lg-offset-3 {
     margin-left: 25%;
